capstone/tf-1/devops/platform/base/networking/netpol-default.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: triage-hub
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
