capstone/tf-1/devops/platform/base/networking/netpol-worker.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tf1-worker-netpol
  namespace: triage-hub
spec:
  podSelector:
    matchLabels:
      app: tf1-worker
  policyTypes:
    - Ingress
    - Egress
  ingress: [] # Deny all ingress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
